[package]
name = "chipster8"
version = "0.1.0"
authors = ["MiMita"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
imgui = "0.1.0"
imgui-glium-renderer = "0.1.0"
imgui-sys = "0.1.0"
glium = "0.25.1"

# [dependencies.sdl2]
# version = "0.32.2"
# features = ["bundled", ]