[package]
name = "chipster8"
version = "0.1.0"
authors = ["MiMita"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
imgui = {git = "https://github.com/Gekkio/imgui-rs"}
imgui-glium-renderer = {git = "https://github.com/Gekkio/imgui-rs"}
imgui-sys = {git = "https://github.com/Gekkio/imgui-rs"}
glium = "0.25.1"
rodio = "0.9.0"

# [dependencies.sdl2]
# version = "0.32.2"
# features = ["bundled", ]